# infix-calculator

./: .gitattributes  .gitignore  CMakeLists.txt  README.rst  build.bat  build.sh
cmake/: ConfigCompile.cmake  FindFlexBison.cmake  pdcalc-config.cmake.in  pdcalc_config_compile.cmake  pdcalc_config_version.cmake  pdcalc_generate_config.cmake  pdcalc_target_helpers.cmake
data/: sample.in.1  sample.in.2  sample.in.3  sample.in.4
include/pdcalc/: calc_parser.h  calc_parser.hh  calc_symbol.hh  common.h  config.hh.in  dllexport.h  features.h  lexer.h  parser.h  string.hh  type_traits.hh  version.h  version.h.in  warnings.h
include/pdcalc/testing/: gtest.hh
src/: CMakeLists.txt  calc_parser.cc  calc_parser_impl.cc  calc_parser_impl.h  calc_parser_impl.hh  lexer.l  main.cc  parser.cc  parser.y
test/: CMakeLists.txt  calc_parser_test.cc
test/pdcalc_cmake_usage_test/: CMakeLists.txt  pdcalc_demo.cc  pdcalc_demo.in
test/pdcalc_test/: CMakeLists.txt  calc_parser_test.cc  type_traits_test.cc
